footer link align correcting

--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -86,6 +86,7 @@
   font-size: 18px;
   line-height: 21px;
   text-decoration: none;
+  text-align: center;
   font-family: 'Roboto Mono', "Arial", monospace;
   padding: 5px;
   border-bottom: 3px solid transparent;
